# saudi-store

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
.cursor/: mcp.example.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_initial_schema.py
backend/src/alnadara/: config.py  db.py  logging.py  main.py
backend/src/alnadara/api/v1/: health.py  orders.py  products.py  tracking.py
backend/src/alnadara/models/: __init__.py  base.py  event_log.py  order.py  order_item.py  product.py  variant.py
backend/src/alnadara/schemas/: order.py  product.py  tracking.py
backend/src/alnadara/scripts/: dev.py  seed.py  wait_for_db.py
backend/src/alnadara/seed/: products_seed.py
backend/src/alnadara/services/: codnetwork.py  orders.py  post_persist.py  pricing.py  sheets_webhook.py
backend/src/alnadara/services/capi/: _common.py  dispatch.py  hashing.py  meta.py  snap.py  tiktok.py
backend/src/alnadara/utils/: ids.py  phone.py
backend/tests/: conftest.py  test_capi_clients.py  test_capi_hashing.py  test_config.py  test_health.py  test_orders.py  test_phone.py  test_pricing.py  test_products.py
docs/: 00-AI-CODER-PROMPT.md  01-project-overview.md  02-brand-identity.md  03-icp-kuwait-women.md  04-positioning-and-usp.md  05-products.md  06-offers-pricing-aov.md  07-copywriting-and-dialect.md  08-cro-playbook.md  09-information-architecture.md  10-design-system.md  11-page-specs.md  12-frontend-architecture.md  13-backend-architecture.md  14-database-schema.md  15-api-contract.md  16-codnetwork-integration.md  17-tracking-pixels-capi.md  18-google-sheets-webhook.md  19-performance-seo-schema.md  20-security.md  21-devops-docker-easypanel.md  22-coding-standards.md  23-testing-qa.md  24-launch-checklist.md  25-copy-bank-kuwaiti-arabic.md  README.md
frontend/: .dockerignore  .env.example  .eslintrc.json  .prettierignore  Dockerfile  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/public/: robots.txt
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/data/: products.ts  testimonials.ts
frontend/src/lib/: cn.ts  (+9 more)
(+64 files in other folders)
