[project]
name = "alnadara"
version = "0.1.0"
description = "Al Nadara — FastAPI orders & integrations service"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "Al Nadara" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "aiosqlite>=0.20.0",
    "nanoid>=2.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "httpx>=0.27.0",
]

[project.scripts]
alnadara-dev = "alnadara.scripts.dev:main"
alnadara-seed = "alnadara.scripts.seed:main"
alnadara-wait-db = "alnadara.scripts.wait_for_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alnadara"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle / pyflakes
    "I",                 # isort
    "UP",                # pyupgrade
    "B",                 # bugbear
    "C4",                # comprehensions
    "ASYNC",             # async lints
    "SIM",               # simplify
    "RUF",               # ruff-specific
]
# B008: FastAPI standard pattern is `Depends(...)` / `Header(...)` in defaults.
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
disallow_untyped_decorators = false
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["nanoid.*", "respx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
pythonpath = ["src"]
